# druid_5e_manager

./: .gitignore  Cargo.toml  README.md
assets/sources/: red  to_rust.red
src/: assets.rs  data.rs  delegate.rs  dice.rs  env.rs  formatter.rs  main.rs  new.rs  utils.rs  view.rs
src/data/: app_config.rs  arcmut.rs  character_state.rs  dyn_val.rs  internal.rs  lenses.rs  new_character_state.rs  serialisation.rs  shared_data.rs  source_raw.rs  sources.rs  stat_modifier.rs  transitive_app_state.rs
src/data/internal/: armour.rs  feat.rs  item.rs  stat.rs
src/data/shared_data/: lens.rs  serialization.rs
src/data/source/: armour.rs  item.rs
src/data/source_raw/: armour_raw.rs  feat_raw.rs
src/data/sources/: source_utils.rs  srd.rs
src/dnd_rules/: mod.rs
src/new/: data.rs  new_character_state.rs  new_view.rs  schemas.rs  stat_modifier.rs  view.rs  widgets.rs
src/new/data/: attribute.rs  identifer.rs  lens.rs
src/new/data/lens/: index_or.rs  index_safe.rs
src/new/data/schemas/: background.rs  class.rs  equipment.rs  player_character.rs  race.rs
src/new/data/schemas/equipment/: adventuring_gear.rs  armour.rs
src/new/schemas/: currency.rs  equipment.rs  player_character.rs  stat.rs
src/new/widgets/: index_or_wrap.rs
src/rules/: mod.rs
src/utils/: index_or.rs  string_casing_ext.rs
src/view/: character_ui.rs  components.rs  content_ui.rs  controllers.rs  formatter.rs  nav_controller.rs  widgets.rs
src/view/components/: common.rs  unique.rs
src/view/widgets/: accordion.rs  advanced_list.rs  hover.rs  ratio_split.rs  separator.rs
