[package]
name = "druid_play"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", features = [ "im" ] }
num = "0.4.0"
serde = { version = "1.0.137", features = [ "derive" ] }
ron = "0.7.1" # Rusty Object Notation
im = { version = "15.1.0", features = [ "serde" ] }
syn = "1.0.98" # Here to resolve a dependency version conflict
strum = { version = "0.24.1", features = [ "derive" ]}
strum_macros = "0.24.2"
lazy_static = "1.4.0"
uuid = { version = "1.1.2", features = [ "v4", "fast-rng" ]}
variantly = "0.2.0"