[package]
name = "druid_5e_manager"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.8", features = [ "im", "svg", "image" ] }
num = "0.4.0"
serde = { version = "1.0.137", features = [ "derive" ] }
serde_json = "1.0.85"
ron = "0.8.0" # Rusty Object Notation
im = { version = "15.1.0", features = [ "serde" ] }
syn = "1.0.98" # Here to resolve a dependency version conflict
strum = { version = "0.24.1", features = [ "derive" ]}
strum_macros = "0.24.2"
lazy_static = "1.4.0"
uuid = { version = "1.1.2", features = [ "v4", "fast-rng" ]}
variantly = "0.2.0"
image = "0.24.3"
druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery" }
